--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -2,23 +2,6 @@ body {
   background-color: dimgray;
 }
 
-.big {
-  list-style-type: none;
-}
-
-.big li {
-  font-size: 30px;
-}
-
-.big li a {
-  color: black;
-}
-
-.big li a:hover {
-  color: dimgray !important;
-  text-decoration: overline;
-}
-
 nav {
   background-color: silver !important;
   border-color: gray !important;
@@ -45,10 +28,10 @@ nav a:hover {
   font-weight: 800;
 }
 
-.inline {
-  margin-left: 30px;
+.space {
+  text-indent: 30px;
 }
 
-.inline strong {
-  font-size: 20px;
+.remove {
+  padding-top: 10px;
 }
